create data/metadata import service

--- a/app/templates/_speech_edit_modal.html
+++ b/app/templates/_speech_edit_modal.html
@@ -12,6 +12,11 @@
         <input type="text" id="edit-speech-title" name="speech_title" required />
       </div>
 
+      <div class="form-group">
+        <label for="edit-credential" class="modal-label">Credential:</label>
+        <input type="text" id="edit-credential" name="credential" placeholder="e.g. PM1, DL5" />
+      </div>
+
       <div class="form-group" id="project-group" style="display: none;">
         <div class="checkbox-input-wrapper" style="display: flex; align-items: center;">
           <input type="checkbox" id="is-project-chk" name="is_project" class="scaled-checkbox">
