--- a/app/templates/lucky_draw.html
+++ b/app/templates/lucky_draw.html
@@ -54,7 +54,7 @@
             {% for entry in roster_entries %}
             <div class="roster-entry" data-order="{{ entry.order_number }}"
                 data-name="{{ entry.contact.Name if entry.contact else 'N/A' }}"
-                data-avatar="{% if entry.contact and entry.contact.Avatar_URL %}{{ url_for('static', filename=entry.contact.Avatar_URL) }}{% endif %}"
+                data-avatar="{% if entry.contact and entry.contact.Avatar_URL %}{% if '/' not in entry.contact.Avatar_URL %}{{ url_for('static', filename=config.AVATAR_ROOT_DIR ~ '/' ~ entry.contact.Avatar_URL) }}{% else %}{{ url_for('static', filename=entry.contact.Avatar_URL) }}{% endif %}{% endif %}"
                 data-type="{% if entry.contact_type %}{{ entry.contact_type }}{% elif entry.contact and entry.contact.user and entry.contact.user.has_role(Permissions.OFFICER) %}Officer{% elif entry.contact %}{{ entry.contact.Type }}{% else %}Guest{% endif %}"
                 data-ticket="{{ entry.ticket.name if entry.ticket else '' }}"
                 data-has-topics-role="{{ 'true' if RoleID.TOPICS_SPEAKER in entry.roles|map(attribute='id') else 'false' }}">
