--- a/app/templates/speech_logs.html
+++ b/app/templates/speech_logs.html
@@ -9,7 +9,12 @@
     <div class="speech-log-header">
         <div class="header-avatar" style="text-align: center;">
             {% if viewed_contact.Avatar_URL %}
-            <img src="{{ url_for('static', filename=viewed_contact.Avatar_URL) }}" alt="{{ viewed_contact.Name }}"
+            {# Check if the URL is already a full path (legacy) or just a filename (new) #}
+            {% set avatar_path = viewed_contact.Avatar_URL %}
+            {% if '/' not in avatar_path %}
+                {% set avatar_path = config.AVATAR_ROOT_DIR ~ '/' ~ avatar_path %}
+            {% endif %}
+            <img src="{{ url_for('static', filename=avatar_path) }}" alt="{{ viewed_contact.Name }}"
                 class="avatar-img">
             {% else %}
             <div class="avatar-placeholder"><i class="fas fa-user"></i></div>
